# django-accounts

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
accounts/: activity_recorder_mixin.py  admin.py  authentication.py  decorators.py  device_generator.py  forms.py  models.py  signals.py  tokens.py  urls.py  utils.py  verification.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: accounts_base.html
accounts/templates/accounts/: edit.html  profile.html  register.html  register_done.html
accounts/templates/accounts/user/: detail.html  device_changed.html  list.html
accounts/templates/accounts/user/activation/: activate_phone.html  email.html  invalid.html  verify_phone.html
accounts/templates/includes/: _form.html  _message.html
accounts/templates/post_office/: base_email.html
accounts/templates/post_office/accounts/: activation_email.html  device_changed_email.html  password_reset_email.html
accounts/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
accounts/tests/: test_authentication_backends.py  test_forms.py  test_models.py  test_views.py  utils.py
app/: settings.py  urls.py
docs/source/: accounts.rst  conf.py  index.rst
